<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TestResult"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/theme_white"
    tools:context=".TestResultFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="100dp"
            android:text="@string/q1_result_title"
            android:textColor="@color/text_black"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="224dp"
            android:text="@string/q2_result_title"
            android:textColor="@color/text_black"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/TestResultReTestBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:text="@string/retest_button"
            android:background="@drawable/test_confirmbutton_selector"
            android:textSize="20sp"
            android:textColor="@color/text_black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/TestResultConfirmBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm_button"
            app:layout_constraintBottom_toBottomOf="@+id/TestResultReTestBtn"
            android:background="@drawable/sendbutton_selector"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.517"
            app:layout_constraintStart_toStartOf="@+id/guideline" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </android.support.constraint.ConstraintLayout>
</LinearLayout>