<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Q1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_white"
    android:orientation="vertical"
    tools:context=".Q1Fragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/TravelTest_toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/theme_green"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/test_title"
                android:textSize="30sp" />
        </android.support.v7.widget.Toolbar>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:text="@string/favor_test_Q1"
            android:textColor="@color/text_black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/attractionBtn_recycleView"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toTopOf="@+id/Q1_nextTest"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/Q1_nextTest"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="120dp"
            android:background="@drawable/sendbutton_selector"
            android:text="@string/next_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>